--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Download</title>
 </head>
 <body>
-    
+ <section class="section-1">
+        <div>
+            <img src="images/Group 27.svg" alt="'экран">
+            <p class="naming">Old Standard TT</p>
+            <p class="author">Режиссер: Алексей Крюков</p>
+        </div>
+    </section>
 </body>
 </html>
