--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
             <p class="author">Режиссер: Алексей Крюков</p>
         </div>
     </section>
+    <section class="section-2">
+        <div>
+            <img src="images/square.svg" alt=" class=img-1">
+            <img src="images/triangle.svg" alt="class=img-2">
+            <img src="images/elipse.svg" alt="class=img-3">
+        </div>
+    </section>
 </body>
 </html>
