--- a/index.html
+++ b/index.html
@@ -15,10 +15,35 @@
         </div>
     </section>
     <section class="section-2">
-        <div>
+        <div class="container">
             <img src="images/square.svg" alt=" class=img-1">
             <img src="images/triangle.svg" alt="class=img-2">
             <img src="images/elipse.svg" alt="class=img-3">
+        </div>
+    </section>
+    <section class="section-3">
+        <div class="container-1">
+            <img src="images/Палка от синопсиса 1.svg" alt="line-1">
+            <h1 class="Header-1">СИНОПСИС</h1>
+            <img src="images/Палка от синопсиса 1.svg" alt="line-2">
+        </div>
+    
+        <div class="container-2_3">
+            <div class="container-2">
+                <p class="text-1">
+                    Old Standard TT — это<br>
+                    цифровое воплощение<br>
+                    дореволюционной традиции<br>
+                    книжных шрифтов. Он строгий,<br>
+                    академичный, напоминает<br>
+                    газетные колонки и титры<br>
+                    старых фильмов.
+                </p>
+            </div>
+    
+            <div class="container-3">
+                <p class="text-2">A</p>
+            </div>
         </div>
     </section>
 </body>
