--- a/index.html
+++ b/index.html
@@ -46,5 +46,55 @@
             </div>
         </div>
     </section>
+    <section class="section-4">
+        <div class="container-4">
+            <img src="images/line-2.svg" alt="line-3">
+            <h1 class="Header-2">АКТЕРЫ</h1>
+            <img src="images/line-2.svg" alt="line-4">
+        </div>
+    </section>
+    <section class="section-5">
+        <div class="actor_block">
+            <div class="text_group">
+                <h2 class="style_name">Regular</h2>
+                <p class="role_text">в роли Классики</p>
+                <p class="font_name">Old Standard</p>
+            </div>
+            <div class="images_block">
+                <img src="images/1.svg" alt="image-1"> 
+                <img src="images/2.svg" alt="image-2">
+            </div>
+        </div>
+       
+        <div class="actor_block">
+            <div class="text_group">
+                <h2 class="style_name italic_font">Italic</h2>
+                <p class="role_text">в роли Элегантности</p>
+                <p class="font_name">Old Standard</p>
+            </div>
+            <div class="images_block">
+                <img src="images/3.svg" alt="image-3">
+                <img src="images/4.svg" alt="image-4">
+            </div>
+        </div>
+        
+       <div class="actor_block">
+        <div class="text_group">
+            <h2 class="style_name">Bold</h2>
+            <p class="role_text">в роли Силы</p>
+            <p class="font_name">Old Standard</p>
+        </div>
+        <div class="images_block">
+            <img src="images/5.svg" alt="image-5">
+            <img src="images/6.svg" alt="image-6">
+        </div>
+    </div>
+    </section>
+    <section class="section-6">
+    <div class="container-6">
+        <img src="images/line_comment.svg" alt="line-c">
+        <h1 class="Header-2">РЕЦЕНЗИИ</h1>
+        <img src="images/line_comment.svg" alt="line-c">
+    </div>
 </body>
-</html>
+</html
