--- a/index.html
+++ b/index.html
@@ -96,5 +96,24 @@
         <h1 class="Header-2">РЕЦЕНЗИИ</h1>
         <img src="images/line_comment.svg" alt="line-c">
     </div>
+    </section>
+    <section class="section-7">
+        <div class="group_text">
+            <p class="russian_text">Этот шрифт возвращает атмосферу<br> начала XX века.<br>
+            Он подходит для книг, научных<br> текстов, кинотитров <br>
+            и всех случаев, когда нужно соединить<br> классику и ясность.</p>
+            <img src="images/line_btt.svg" alt="line_btt">
+            <p class="english_text">This font brings back the elegance of<br> early 20th century type.<br>
+            It works for books, academic papers,<br> cinema titles,<br>
+            and everything where tradition meets clarity.</p>
+        </div>
+    </section>
+    <section class="section-8">
+        <div class="container-8">
+        <img src="images/line_titry.svg" alt="line-t">
+        <h1 class="Header-2">ТЕХНИЧЕСКИЕ ТИТРЫ</h1>
+        <img src="images/line_titry.svg" alt="line-t">
+        </div>
+    </section>
 </body>
 </html
