--- a/index.html
+++ b/index.html
@@ -115,5 +115,29 @@
         <img src="images/line_titry.svg" alt="line-t">
         </div>
     </section>
+    <section class="section-9">
+        <div class="container-9">
+            <p class="titry">
+            Стили: regular, italic, bold <br>
+            Поддержка языков: latin, cyrillic<br>
+            Дизайнер: Алексей Крюков<br>
+            Релиз: 2008</p>
+        </div>
+    </section>
+    <section class="section-10">
+        <div class="container-10">
+            <img src="images/line_end.svg" class="line-end" alt="line-end-left">
+        
+            <div class="center-block">
+                <img class="end" src="images/end.svg" alt="end">
+                <div class="text-wrapper">
+                    <p class="ending">The end</p>
+                    <p class="old_standard">Old Standard</p>
+                </div>
+            </div>
+        
+            <img src="images/line_end.svg" class="line-end" alt="line-end-right">
+        </div>
+    </section>
 </body>
 </html
